--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ button {
   border: none;
   border-radius: 5px;
   font-size: 20px;
+  background-color: #ffffff;
 }
 
 button:hover {
@@ -63,7 +64,19 @@ button:hover {
 }
 
 #nextQuestion {
-  width: 200px;
+  background-color: rgb(50, 50, 50);
+  color: #ffffff;
+  width: 300px;
+  height: 50px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+}
+#startQuiz {
+  width: 300px;
+  background-color: rgb(50, 50, 50);
+  color: #ffffff;
 }
 
 h3 {
